# Arc-search_IPM_LP_py

./: .gitignore  .pre-commit-config.yaml  Project.toml  Readme.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml  sync.yml  test.yml  unittest.yml
config/: config_base.ini  config_optimizer.ini  solver_info_test.json
data/test/processed/: KB2_A.npz  KB2_b.csv  KB2_b.npy  KB2_c.csv  KB2_c.npy  test_problem_A.csv  written_A.npz
docs/: conf.py  index.html  modules.rst  src.rst  tests.rst
docs/src/: index.html  preprocess_netlib.html  profile_result.html  solve_generated_problem.html  solve_netlib.html
docs/src/data_access/: csv_handler.html  index.html  mps_handler.html
src/: __main__.py  preprocess_netlib.py  profile_result.py  solve_generated_problem.py  solve_netlib.py
src/app/: algorithm_builder.py  cplex_solver.py  decide_solve_problem.py  generate_problem.py  get_solvers.py
src/data_access/: __init__.py  csv_handler.py  mps_handler.py
src/drawer/: drawer.py
src/infra/: algorithm_builder.py  get_solvers.py  path_generator.py  repository_problem.py  repository_problem_with_julia.py  repository_solved_data.py
src/linear_system_solver/: HHLlib.jl  exact_linear_system_solver.py  hhl_julia.py  hhl_qiskit.py  inexact_linear_system_solver.py
src/logger/: __init__.py  logger.py
src/problem/: __init__.py  decide_solve_problem.py  generate_problem.py  preprocessor.py  problem.py  repository.py
src/profiler/: profiler.py
src/run_utils/: decolators.py  define_paths.py  generate_problem.py  get_solvers.py  solve_problem.py  write_files.py
src/slack/: slack.py
src/solver/: __init__.py  get_solvers.py  inexact_interior_point_method.py  initial_point_maker.py  interior_point_method.py  interior_point_method_with_restarting_strategy.py  iterative_refinement.py  optimization_parameters.py  repository.py  search_direction_calculator.py  solve_problem.py  solved_checker.py  solved_data.py  solver.py  variable_updater.py  variables.py
src/utils/: config_utils.py  file_util.py  run_utils.py
test/: conftest.py  test_main.py  test_solve_LP.py  utils.py
test/app/: solver_info.json  test_algorithm_builder.py  test_cplex_solver.py  test_decide_problems.py  test_get_solvers.py
test/data_handler/: test_CsvHandler.py  test_MpsLoader.py
test/infra/: test_algorithm_builder.py  test_mnes_search_direction_calculator.py  test_repository_problem.py
test/linear_system_solver/: test_linear_system_solver.py
test/problem/: test_LP.py  test_Preprocessor.py  test_decide_problems.py  test_repository.py
test/solver/: test_inexact_interior_point_method.py  test_interior_point_method.py  test_interior_point_method_with_restarting_strategy.py  test_iterative_refinement.py  test_linear_system_solver.py  test_repository.py  test_variable_updater.py  utils.py
(+79 files in other folders)
