[tool.poetry]
name = "Arc-search_IPM_lp"
version = "0.1.0"
description = ""
authors = ["kuru-to <ideruf96@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
pysmps = "^1.5.6"
tqdm = "^4.64.0"
dataclass-csv = "^1.4.0"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
pandas = "^1.4.2"
pydantic = "^1.10.2"
slack-sdk = "^3.21.3"
qiskit = "0.38.0"
julia = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
rope = "^1.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.961"
pylint = "^2.14.1"
cprofilev = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
