[tool.poetry]
name = "Arc-search_IPM_lp_private"
version = "0.1.0"
description = ""
authors = ["kuru-to <ideruf96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
pysmps = "^1.5.6"
tqdm = "^4.64.0"
dataclass-csv = "^1.4.0"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
pydantic = "^1.10.2"
slack-sdk = "^3.21.3"
qiskit = "0.38.0"
julia = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
rope = "^1.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.961"
cprofilev = "^1.0.7"
black = "^24.4.2"
ruff = "^0.4.10"

[tool.poetry.group.local.dependencies]
pdoc3 = "^0.11.0"
pre-commit = "^3.7.1"

[tool.black]
line-length = 119

[tool.ruff]
# Same as Black.
line-length = 119

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
