[tool.poetry]
name = "Arc-search_IPM_lp_private"
version = "0.1.0"
description = ""
authors = ["kuru-to <ideruf96@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.22.4"
pysmps = "^1.5.6"
tqdm = "^4.64.0"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
pydantic = "^2.0"
slack-sdk = "^3.21.3"
julia = "^0.6.2"
certifi = "^2025.7.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
rope = "^1.1.1"
mypy = "^0.961"
cprofilev = "^1.0.7"
black = "^24.4.2"
ruff = "^0.4.10"
pdoc3 = "^0.11.0"

[tool.poetry.group.local.dependencies]
pre-commit = "^3.7.1"

[tool.black]
line-length = 119

[tool.ruff]
# Same as Black.
line-length = 119

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
